--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -1,2 +1,4 @@
-@import "app/scss/reset"
-@import "app/scss/main"
+@import "../scss/reset"
+@import "../scss/variables"
+@import "../scss/mixins"
+@import "../scss/main"
