Add Trichology page

--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -1,4 +1,5 @@
 @import "../scss/reset"
 @import "../scss/variables"
 @import "../scss/mixins"
+@import "../scss/bootstrap-modal/bootstrap-modal"
 @import "../scss/main"
