--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -2,10 +2,10 @@
 
 $baloo-chettan2: 'Baloo Chettan 2', sans-serif;
 //Colors
-$color-orange: #f15642;
-$color-black: #000000;
-$color-black-light: #353535;
-$color-gray: #6b6b6b;
+//$color-orange: #f15642;
+//$color-black: #000000;
+//$color-black-light: #353535;
+//$color-gray: #6b6b6b;
 
 //Fonts
 $font-baloo-chettan: 'Baloo Chettan', sans-serif;
