--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -107,6 +107,9 @@ html {
   -ms-text-size-adjust: 100%;
   /* 2 */ }
 
+a {
+  color: inherit; }
+
 /**
  * Address `outline` inconsistency between Chrome and other browsers.
  */
@@ -364,7 +367,8 @@ body {
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  z-index: 9; }
+  z-index: 9;
+  border-bottom: 2px solid #02aeae; }
   .header .logo-wrapper .logo {
     width: 100%;
     height: 40px;
@@ -478,6 +482,13 @@ section.hero-block {
     section.hero-block ul.about-us__list li {
       font-size: 30px;
       width: 300px; }
+      section.hero-block ul.about-us__list li a {
+        text-decoration: none; }
+        section.hero-block ul.about-us__list li a:hover {
+          color: #02aeae; }
+      section.hero-block ul.about-us__list li.active a {
+        font-weight: bold;
+        color: #02aeae; }
 
 section.experience-block .font_bold {
   font-weight: 500; }
@@ -509,7 +520,7 @@ section.experience-block .text-block {
       -ms-flex-direction: column;
           flex-direction: column;
   margin-right: auto;
-  padding: 50px 15px;
+  padding: 30px 15px;
   text-align: left; }
   section.experience-block .text-block__heading {
     font-size: 40px;
@@ -614,7 +625,9 @@ section.statistic-block {
       text-transform: uppercase; }
 
 section.our-team {
-  padding: 80px 0; }
+  padding: 80px 0;
+  background: url(../img/stat_bg.jpg) no-repeat;
+  background-size: cover; }
   section.our-team .heading {
     font-size: 36px;
     text-align: center;
@@ -631,7 +644,8 @@ section.our-team {
     display: flex; }
     section.our-team .team-list .team-item {
       width: 20%;
-      padding: 0 10px; }
+      padding: 0 10px;
+      margin-bottom: 20px; }
       section.our-team .team-list .team-item__inner {
         background: #d9d9d94d;
         display: -webkit-box;
@@ -664,6 +678,9 @@ section.our-team {
         padding: 0 10px; }
         section.our-team .team-list .team-item__name:hover {
           color: #02aeae; }
+        @media screen and (max-width: 1200px) {
+          section.our-team .team-list .team-item__name {
+            font-size: 18px; } }
       section.our-team .team-list .team-item__position {
         font-weight: 500;
         font-style: normal;
@@ -698,6 +715,17 @@ section.our-team {
             text-decoration: none; }
           section.our-team .team-list .team-item__social ul li a:hover i {
             color: #02aeae; }
+      section.our-team .team-list .team-item .more-info {
+        padding-bottom: 2px;
+        border-bottom: 1px solid #222222;
+        width: -webkit-fit-content;
+        width: -moz-fit-content;
+        width: fit-content;
+        margin: 0 auto 35px;
+        cursor: pointer; }
+        section.our-team .team-list .team-item .more-info:hover {
+          border-bottom: 1px solid #02aeae;
+          font-weight: bold; }
       @media screen and (max-width: 1024px) {
         section.our-team .team-list .team-item {
           width: 30%; } }
@@ -777,7 +805,7 @@ section.our-help {
       padding: 40px 0; } }
 
 section.our-services {
-  padding: 80px 0; }
+  padding: 80px 0 0; }
   section.our-services .heading {
     font-size: 36px;
     text-align: center;
@@ -810,7 +838,15 @@ section.our-services {
       display: block;
       width: 100px;
       height: 100px;
-      margin-bottom: 25px; }
+      margin-bottom: 25px;
+      display: block;
+      border: 2PX solid #02aeae;
+      border-radius: 8px;
+      padding: 10px;
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box; }
+      section.our-services .service-item__icon:hover {
+        border: 4px solid #02aeae; }
       section.our-services .service-item__icon img {
         width: 100%;
         height: 100%;
@@ -838,7 +874,8 @@ section.our-services {
       font-size: 18px;
       line-height: 1.6;
       letter-spacing: 0px;
-      text-align: center; }
+      text-align: center;
+      margin-top: auto; }
   @media screen and (max-width: 1024px) {
     section.our-services {
       padding: 40px 0; } }
@@ -976,6 +1013,53 @@ section.people-say {
   @media screen and (max-width: 1024px) {
     section.people-say {
       padding: 40px 0; } }
+
+.modal .modal-dialog {
+  max-width: 800px; }
+  .modal .modal-dialog.short-modal {
+    min-width: 600px; }
+  .modal .modal-dialog .modal-content {
+    border: 3px solid #02aeae;
+    -webkit-box-shadow: 0 0 15px 5px #ffffff70;
+            box-shadow: 0 0 15px 5px #ffffff70;
+    border-radius: 10px; }
+  .modal .modal-dialog .modal-header {
+    border-bottom: 2px solid #02aeae;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .modal .modal-dialog .modal-header button {
+      padding: 5px 10px; }
+    .modal .modal-dialog .modal-header .heading {
+      width: 100%;
+      font-weight: bold;
+      font-size: 24px;
+      text-align: center;
+      margin-bottom: 8px; }
+    .modal .modal-dialog .modal-header .sub-heading {
+      font-size: 18px;
+      font-style: italic;
+      font-weight: 500; }
+  .modal .modal-dialog .modal-body p {
+    display: block;
+    margin-bottom: 10px;
+    line-height: 1.1; }
+    .modal .modal-dialog .modal-body p.indent {
+      text-indent: 25px; }
 
 ul {
   display: -webkit-box;
