--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -36,6 +36,7 @@ body {
   align-items: center;
   justify-content: space-between;
   z-index: 9;
+  border-bottom: 2px solid $color-cian;
 
   .logo-wrapper {
     .logo {
@@ -65,6 +66,7 @@ body {
         }
 
         a {
+
           text-decoration: none;
           color: inherit;
 
@@ -149,6 +151,20 @@ section {
       li {
         font-size: 30px;
         width: 300px;
+
+        a {
+          text-decoration: none;
+          &:hover {
+            color: $color-cian;
+          }
+        }
+
+        &.active {
+          a {
+            font-weight: bold;
+            color: $color-cian;
+          }
+        }
       }
     }
   }
@@ -180,7 +196,7 @@ section {
       display: flex;
       flex-direction: column;
       margin-right: auto;
-      padding: 50px 15px;
+      padding: 30px 15px;
       text-align: left;
 
       &__heading {
@@ -230,7 +246,7 @@ section {
     }
 
     img {
-      width:100%;
+      width: 100%;
       object-fit: contain;
       &.custom-size {
         display: block;
@@ -243,7 +259,7 @@ section {
 
     .w100pr {
       img {
-        width:auto;
+        width: auto;
       }
     }
   }
@@ -294,6 +310,8 @@ section {
 
   &.our-team {
     padding: 80px 0;
+    background: url(../img/stat_bg.jpg) no-repeat;
+    background-size: cover;
 
     .heading {
       font-size: 36px;
@@ -314,6 +332,7 @@ section {
       .team-item {
         width: 20%;
         padding: 0 10px;
+        margin-bottom: 20px;
 
         &__inner {
           background: #d9d9d94d;
@@ -321,7 +340,6 @@ section {
           flex-direction: column;
           text-align: center;
         }
-
         &__img {
           margin-bottom: 35px;
           object-fit: cover;
@@ -333,7 +351,6 @@ section {
             -webkit-filter: grayscale(0%);
           }
         }
-
         &__name {
           font-weight: normal;
           font-style: normal;
@@ -347,8 +364,11 @@ section {
           &:hover {
             color: $color-cian;
           }
-        }
 
+          @include laptop {
+            font-size: 18px;
+          }
+        }
         &__position {
           font-weight: 500;
           font-style: normal;
@@ -359,7 +379,6 @@ section {
           text-transform: uppercase;
           margin-bottom: 15px;
         }
-
         &__social {
           display: flex;
           justify-content: center;
@@ -387,9 +406,21 @@ section {
             }
           }
         }
+        .more-info {
+          padding-bottom: 2px;
+          border-bottom: 1px solid #222222;
+          width: fit-content;
+          margin: 0 auto 35px;
+          cursor: pointer;
+
+          &:hover {
+            border-bottom: 1px solid $color-cian;
+            font-weight: bold;
+          }
+        }
 
         @include tablet-large {
-          width:30%;
+          width: 30%;
         }
       }
 
@@ -398,9 +429,6 @@ section {
         justify-content: center;
       }
     }
-
-
-
 
     @include tablet-large {
       padding: 40px 0;
@@ -476,7 +504,7 @@ section {
   }
 
   &.our-services {
-    padding: 80px 0;
+    padding: 80px 0 0;
 
     .heading {
       font-size: 36px;
@@ -503,6 +531,18 @@ section {
         width: 100px;
         height: 100px;
         margin-bottom: 25px;
+        display: block;
+        border: 2PX solid #02aeae;
+        border-radius: 8px;
+        padding: 10px;
+        box-sizing: border-box;
+        &:hover {
+          border: 4px solid #02aeae;
+        }
+
+        a {
+
+        }
 
         img {
           width: 100%;
@@ -542,6 +582,7 @@ section {
         line-height: 1.6;
         letter-spacing: 0px;
         text-align: center;
+        margin-top: auto;
       }
     }
 
@@ -710,6 +751,66 @@ section {
     @include tablet-large {
       padding: 40px 0;
     }
+  }
+
+}
+
+//Modal Dialogs - Our Team more info
+.modal {
+  .modal-dialog {
+    max-width: 800px;
+
+    &.short-modal {
+      min-width: 600px;
+    }
+
+    .modal-content {
+      border: 3px solid $color-cian;
+      box-shadow: 0 0 15px 5px #ffffff70;
+      border-radius: 10px;
+    }
+
+    .modal-header {
+      border-bottom: 2px solid $color-cian;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      button {
+        padding: 5px 10px;
+      }
+
+      .heading {
+        width: 100%;
+        font-weight: bold;
+        font-size: 24px;
+        text-align: center;
+        margin-bottom: 8px;
+
+      }
+
+      .sub-heading {
+        font-size: 18px;
+        font-style: italic;
+        font-weight: 500;
+
+      }
+
+    }
+
+    .modal-body {
+      p {
+        display: block;
+        margin-bottom: 10px;
+        line-height: 1.1;
+
+        &.indent {
+          text-indent: 25px;
+        }
+      }
+    }
+
   }
 
 }
